--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,13 +13,14 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728825.md#1" title="中共是跨国犯罪组织 美前高官：望拜登认定""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/P1130168-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730042.md#1" title="两律师为12港人辩护遭撤照 美国务院关注""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230934813-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731561.md#1">【财经话题】美元汇率触底反弹藏杀机</a><br>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/11/4/n12523669.md#1">【思想领袖】哥尔达斯基：民粹主义如何兴起？</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731068.md#1">【时事纵横】拜登施冷暴力？习大清洗遇生死战？</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730190.md#1">各地出生人口骤降 专家：中国人口塌陷已到</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731306.md#1">杨洁篪向美高调喊话 专家谈美中关系走向</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731561.md#1">【财经话题】美元汇率触底反弹藏杀机</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/11/4/n12523669.md#1">【思想领袖】哥尔达斯基：民粹主义如何兴起？</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731068.md#1">【时事纵横】拜登施冷暴力？习大清洗遇生死战？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730190.md#1">各地出生人口骤降 专家：中国人口塌陷已到</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731306.md#1">杨洁篪向美高调喊话 专家谈美中关系走向</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726461.md#1">【独家】上海流调报告为何不提染疫源头</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729243.md#1">杨洁篪喊话吁双方尽快接触 美国务院回应</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726483.md#1">专访程晓农：拜登上任 美中关系转变？</a><br>
@@ -29,7 +30,6 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729337.md#1">组图：世卫专家到武汉调查 中共如临大敌</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726665.md#1">美儿童医院华裔夫妇为中共窃密 妻被判2年半</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12726979.md#1">杨洁篪对美讲话多次断线 被讽该换翻墙软件</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729427.md#1">【翻墙必看】官媒批“厕所革命”打脸习？</a><br>
 <br><p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728677.md#1">王友群：王书金死了 谁是杀害聂树斌的真凶？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729233.md#1">唐青：习近平的赤色香港梦</a><br>
@@ -39,19 +39,17 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726597.md#1">【一线采访】江苏医务人员披露抗疫一线乱象</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12725933.md#1">【名家专栏】宪法允许弹劾前总统吗？</a><br>
 <br><p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730488.md#1">【一线采访】哈尔滨一志愿者被住户捅死</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730890.md#1">台海与中印边境紧张 美三航母齐聚印太</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730621.md#1">两岸十大政治人物排名 朱镕基居首习近平靠后</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730787.md#1">【新闻大家谈】太阳风案曝中共黑手 杨洁篪遇冷</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728421.md#1">分析：窃取党和国家权力 习的政敌是谁</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730460.md#1">报告：中国月收入超5千的网民不足三成</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730488.md#1">【一线采访】哈尔滨一志愿者被住户捅死</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731068.md#1">【时事纵横】拜登施冷暴力？习大清洗遇生死战？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731304.md#1">中共国企科大讯飞离奇闪崩 市值蒸发109亿</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12729074.md#1">【时事纵横】拜政府菜鸟级失误 中共促缅政变？</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730890.md#1">台海与中印边境紧张 美三航母齐聚印太</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12721609.md#1">【时事纵横】拜登顾问再喊话 习担心黑天鹅？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729233.md#1">唐青：习近平的赤色香港梦</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730787.md#1">【新闻大家谈】太阳风案曝中共黑手 杨洁篪遇冷</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731177.md#1">钟原：中共党媒称“反将美国一军”是何意？</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730460.md#1">报告：中国月收入超5千的网民不足三成</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731068.md#1">【时事纵横】拜登施冷暴力？习大清洗遇生死战？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731466.md#1">【秦鹏直播】等不到拜登电话 习近平着急吗？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731345.md#1">【役情最前线】封口！大陆自媒体须取得许可证</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731335.md#1">港姐李珊珊曾被嘲肥婆 获郑秀文帮助摆脱惊恐症</a><br>
@@ -62,6 +60,7 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12729103.md#1">检测海鲜、冰棒病毒有用吗？新冠检测3大疑问</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12729074.md#1">【时事纵横】拜政府菜鸟级失误 中共促缅政变？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728687.md#1">“金马奖欠我一个影帝” 黄秋生誓言夺回奖座</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728749.md#1">【财商天下】达沃斯推大重构 全球精英深层计划</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12729046.md#1">【一线采访】大兴区一刀切 上万人求解封</a><br>
@@ -99,8 +98,9 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12723998.md#1">防中共间谍 英国将收紧44个领域的签证</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12723292.md#1">【内幕】华大基因和中共军方科研关系密切</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12723240.md#1">习近平快速处决政敌白手套赖小民内幕</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/30/n12723159.md#1">周迅离婚后亮相节目 鼻梁受伤真相笑翻全场</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.40.161.121/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,531</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.241.138.46/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,531</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -115,9 +115,9 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12696443.md#1">【独家】国防密件曝中共军用无人机项目</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/16/n12691803.md#1">【内幕】疫情下广西当局为何优待国际生</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12720282.md#1">祭灶神的故事 不祭灶得天祐怎办到的？</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/11/9/n12537270.md#1">【敦煌寻梦】归义军时代的盛世余晖</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12706807.md#1">新年习俗：为何说春贴辟邪纳福？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12724551.md#1">【涛哥侃封神】第三十回  周纪激反武成王</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12721570.md#1">【西游义趣】之序篇：悟空、张良的大忍之心</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12724957.md#1">浅说“忍”的内涵</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
